# body-problem

./: .dockerignore  .gitignore  Cargo.toml  license.md  readme.md
body_problem/: Cargo.toml
body_problem/src/: lib.rs
body_problem_web_app/: .gitignore  Cargo.toml  Trunk.toml  docker-compose-dev.yml  docker-compose-prod.yml  index.html  package-lock.json  package.json  tailwind.config.js
body_problem_web_app/docker/web-server-dev/: Dockerfile
body_problem_web_app/docker/web-server-prod/: Dockerfile
body_problem_web_app/src/: lib.rs  main.rs  reactor.rs
body_problem_web_app/src/agents/: mod.rs  simulation_reactor.rs
body_problem_web_app/src/components/: app.rs  body_canvas.rs  body_table.rs  body_table_row.rs  button.rs  energy_sum_table.rs  footer.rs  mod.rs  simulation_controls.rs  simulation_panel.rs  trajectory_canvas.rs  validated_input.rs
body_problem_web_app/src/hooks/: mod.rs  use_google_analytics.rs
body_problem_web_app/src/models/: mod.rs  rendered_body.rs  settings.rs  trajectory_segment.rs
body_problem_web_app/src/styles/: main.css
body_problem_web_app/src/utils/: mod.rs
