[package]
name = "body_problem_web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
web-sys = { version = "0.3.69", features = ["HtmlCanvasElement", "CanvasRenderingContext2d"] }
body_problem = { path = "../body_problem" }
nalgebra = "0.33.0"
yew-hooks = "0.3.2"
log = "0.4.22"
gloo-console = "0.3.0"
