[package]
name = "body_problem_web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
web-sys = { version = "0.3.69", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "Window", "InputEvent"] }
body_problem = { path = "../body_problem" }
nalgebra = "0.33.0"
yew-hooks = "0.3.2"
log = "0.4.22"
gloo-console = "0.3.0"
serde_json = "1.0.120"
gloo-utils = "0.2.0"
yew-agent = "0.3.0"
futures = "0.3.30"
wasm-logger = "0.2.0"
async-std = "1.12.0"
gloo-events = "0.2.0"
web-time = "1.1.0"
serde = { version = "1.0.204", features = ["derive"] }
